--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.14.0",
+    "quagga": "^0.12.1"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
